Creates the endpoint to decode a base64 value in the decoder-service application and all its validations

--- a/data-diff-service/src/main/resources/messages.properties
+++ b/data-diff-service/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 error.empty.encoded_value=Encoded value can not be empty or contain only whitespaces.
 error.value_not_base64=Value must be in base64 format.
 error.null.id=Id can not be null.
-error.encoded.base64.max_size=The size of the field base64EncodedValue can not be greater than {max} caracteres.
+error.encoded.base64.max_size=The size of the field base64EncodedValue can not be greater than {max} characters.
