Created the endpoint responsible for comparing the Left and Right values stored on the database

--- a/data-diff-service/src/main/resources/messages.properties
+++ b/data-diff-service/src/main/resources/messages.properties
@@ -2,3 +2,6 @@ error.empty.encoded_value=Encoded value can not be empty or contain only whitesp
 error.value_not_base64=Value must be in base64 format.
 error.null.id=Id can not be null.
 error.encoded.base64.max_size=The size of the field base64EncodedValue can not be greater than {max} characters.
+error.diff.record.not_found=Record not found.
+error.missing.left.value=The left value is missing.
+error.missing.right.value=The right value is missing.
